[project]
name = "feyman-learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=8.36.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.4",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "semantic-chunker>=0.2.0",
    "sentence-transformers>=4.1.0",
    "tavily-python>=0.7.2",
]
